<resources>
    <string name="app_name">RonixTech Home</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">New Account</string>
    <string name="login_with">Login with</string>
    <string name="password_reset_mail_sent_successfully">An email has been sent to you. Please check your inbox.</string>
    <string name="verification_mail_sent_successfully">An email has been sent to you. Please check your inbox.</string>
    <string name="verification_title">Thanks for registering</string>
    <string name="verification">Verification</string>
    <string name="verification_message_hint">A verification email has been sent to %s. Please check your inbox and follow the instructions in the email to verify your account</string>
    <string name="verification_message_resend">If you haven\'nt received a verification email, please click on \'Resend Email\' and re-check your inbox.</string>
    <string name="verification_resend">Resend Email</string>
    <string name="verification_wrong_mail">Use another email</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="refresh_devices">Refresh Devices</string>
    <string name="locations">Locations</string>
    <string name="about_help">About and Support</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="sync">Sync</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="logout">Logout</string>
    <string name="about_description">This is the Smart Home App from RonixTech.\nYou can use it to monitor/control all your RonixTech Controllers in your home from your smart phone. Control can be done locally from your home or remotely from anywhere in the world through the internet.</string>
    <string name="support_email_title">For support and technical assistance:</string>
    <string name="support_email">technical@ronixtech.com</string>
    <string name="welcome">Welcome</string>
    <string name="location">Location</string>
    <string name="linked_account">Linked Account</string>
    <string name="add_linked_account">Add Linked Account</string>
    <string name="add_account_title">Add a Linked Account</string>
    <string name="add_account_description">To add a new account, please enter the name and email address of the person you want to invite then click Add</string>
    <string name="account_name">Name</string>
    <string name="account_name_hint">Name of the person you\'re inviting</string>
    <string name="account_email">Email</string>
    <string name="account_email_hint">Email Address</string>
    <string name="add_account_note">After adding this account, it will get a copy of all your current Places, WiFi networks and Devices.</string>
    <string name="remove_linked_account_question">Are you sure you want to remove the selected linked account?</string>
    <string name="remove_linked_account_description">Removing the account will remove all shared data with that account from their device.\nThis cannot be undone.</string>
    <string name="remove_linked_account_failed">Failed to remove linked account, please try again later.</string>
    <string name="begin_exporting_title">To begin exporting your data, click on the Export Data button</string>
    <string name="begin_exporting_description">This will export all your Places, WiFi networks, Rooms, Devices and all app settings to the cloud.</string>
    <string name="export_name">Backup Name</string>
    <string name="export_name_hint">Enter backup name here (optional)</string>
    <string name="uploading_database_files_preparing">Preparing to upload backup</string>
    <string name="uploading_database_files">Uploading backup</string>
    <string name="uploading_database_file">Uploading file %d/%d</string>
    <string name="uploading_database_files_complete">Upload Complete</string>
    <string name="uploading_database_file_failed">Uploading backup failed, please try again</string>
    <string name="uploading_updating_online_database">Updating cloud data</string>
    <string name="uploading_updating_online_database_failed">Updating cloud data failed</string>
    <string name="begin_importing_title">To begin importing your data, choose a backup then click on the Import Data button</string>
    <string name="begin_importing_description">This will overwrite all your Places, WiFi networks, Rooms, Devices and all app settings.\nThis cannot be undone</string>
    <string name="importing_name_title">Select backup to import:</string>
    <string name="importing_name">Backup Name</string>
    <string name="importing_name_hint">Tap here to select a backup from the cloud</string>
    <string name="downloading_database_file_not_found">No backups found</string>
    <string name="downloading_database_files_preparing">Preparing to download backup</string>
    <string name="downloading_database_files">Downloading backup</string>
    <string name="downloading_database_file">Downloading file %d/%d</string>
    <string name="downloading_database_files_complete">Download Complete</string>
    <string name="downloading_database_file_failed">Downloading files failed, please try again</string>
    <string name="backup_not_compatible">Backup not compatible with current app version</string>
    <string name="backup_compatible">Backup compatible with current app version</string>
    <string name="import_successful">Data imported successfully</string>
    <string name="export_successful">Data exported successfully</string>
    <string name="import_failed">Data import failed</string>
    <string name="export_failed">Data export failed</string>
    <string name="place">Place</string>
    <string name="place_colon">Place:</string>
    <string name="places">Places</string>
    <string name="add_place">Add Place</string>
    <string name="add_new_place">Add New Place</string>
    <string name="add_a_place">Add a placae</string>
    <string name="no_places">No places</string>
    <string name="add_place_first">Add a place first</string>
    <string name="select_place_first">Select a place first</string>
    <string name="default_place_hint">Make this my Default place for this app</string>
    <string name="add_place_location">Add Location</string>
    <string name="add_place_location_title">Location-Based Features</string>
    <string name="add_place_location_description_1">The scheduling features of this app require access to your location.</string>
    <string name="add_place_location_description_2">With your permission, this app can determine your location automatically. You may also choose to enter your full address or skip this setup altogether. If you skip this setup, scheduling features will not work until you enter an address for this place.</string>
    <string name="add_place_get_location">Get My Location</string>
    <string name="add_place_enter_address">Enter Address</string>
    <string name="add_place_skip">Skip this for now</string>
    <string name="add_place_location_address_title">Setup Place Address</string>
    <string name="place_address">Address</string>
    <string name="place_city">City</string>
    <string name="place_state">State</string>
    <string name="place_country">Country</string>
    <string name="place_zip_code">Zip Code</string>
    <string name="geocoding_error_address_found">Address found</string>
    <string name="geocoding_error_service_not_available">Geocoding service not available, enter address details manually</string>
    <string name="geocoding_error_invalid_lat_long">Invalid location selected, enter address details manually</string>
    <string name="geocoding_error_no_address_found">No address found for specified location, please enter it manually</string>
    <string name="add_place_title">Setup your place</string>
    <string name="add_place_description">To begin, please enter the name, type, WiFi network and the number of floors of your place then click Add</string>
    <string name="add_place_level_description">Select place</string>
    <string name="place_name">Place Name</string>
    <string name="place_type">Place Type</string>
    <string name="place_type_hint">Tap here to select the place type</string>
    <string name="place_selection_hint">Tap here to select a place</string>
    <string name="place_already_exists_error">A place already exists with this name</string>
    <string name="place_floors_error">Can\'t remove floor, as a place must have at least 1 floor</string>
    <string name="place_address_hint">Tap here to edit place address</string>
    <string name="edit_place_title">Edit your place</string>
    <string name="remove_place">Remove Place</string>
    <string name="edit_place">Edit Place</string>
    <string name="edit_place_description">Edit the name, type, WiFi network(s) or floors of your place then click Save</string>
    <string name="place_long_press_hint">Long press on any Place for more options</string>
    <string name="remove_place_question">Are you sure you want to remove the selected place?</string>
    <string name="remove_place_description">Removing the place will also remove all associated floors, rooms and devices</string>
    <string name="select_default_place_title">Default Place</string>
    <string name="floor">Floor</string>
    <string name="add_floor_level_description">Select floor level</string>
    <string name="room">Room</string>
    <string name="rooms">Rooms</string>
    <string name="no_rooms">No rooms</string>
    <string name="add_room_description">To begin, please enter the name and type of your room then click Add</string>
    <string name="room_name">Room Name</string>
    <string name="room_location">Floor</string>
    <string name="remove_room">Remove Room</string>
    <string name="edit_room">Edit Room</string>
    <string name="edit_room_image">Edit Room Image</string>
    <string name="device">Smart Controller</string>
    <string name="unit_name_edit">Pick a name for your RonixTech Smart Controller</string>
    <string name="unit_mode_hint">Pick the mode which you will use for this Smart Controller</string>
    <string name="unit_mode_primary">Primary Smart Controller</string>
    <string name="unit_mode_secondary">Secondary Smart Controller</string>
    <string name="unit_mode_primary_description">This mode allows the Smart Controller\'s devices to be fully configured</string>
    <string name="unit_mode_secondary_description">This mode allows the Smart Controller to be paired to another Smart Controller and its devices to be mirrored from the other Smart Controller</string>
    <string name="unit_mode_difference">Note: Primary Smart Controllers should be electrically wired to the AC loads, while secondary Smart Controllers will not be connected to any AC loads</string>
    <string name="shutter_controller_name_hint">Shutter</string>
    <string name="room_devices_on">Turn ON</string>
    <string name="room_devices_off">Turn OFF</string>
    <string name="toggle_dimming">Toggle dimming</string>
    <string name="remove_device">Remove Smart Controller</string>
    <string name="edit_device">Edit Smart Controller</string>
    <string name="edit_device_location">Change Location</string>
    <string name="device_info">Smart Controller Info</string>
    <string name="update_device">Update Smart Controller Firmware</string>
    <string name="continue_button">Continue</string>
    <string name="add">Add</string>
</resources>