<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_dimming"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/toggle_dimming" />
    <item
        android:id="@+id/action_device_info"
        android:orderInCategory="100"
        android:title="@string/device_info" />
    <item
        android:id="@+id/action_edit_device"
        android:orderInCategory="100"
        android:title="@string/edit_device" />
    <item
        android:id="@+id/action_edit_device_location"
        android:orderInCategory="100"
        android:title="@string/edit_device_location" />
    <item
        android:id="@+id/action_update_device"
        android:orderInCategory="100"
        android:title="@string/update_device" />
    <item
        android:id="@+id/action_remove_device"
        android:orderInCategory="100"
        android:title="@string/remove_device" />
</menu>