<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_room_device_on"
        android:orderInCategory="100"
        android:title="@string/room_devices_on" />
    <item
        android:id="@+id/action_room_device_off"
        android:orderInCategory="100"
        android:title="@string/room_devices_off" />
    <item
        android:id="@+id/action_edit_room_image"
        android:orderInCategory="100"
        android:title="@string/edit_room_image" />
    <item
        android:id="@+id/action_edit_room"
        android:orderInCategory="100"
        android:title="@string/edit_room" />
    <item
        android:id="@+id/action_remove_room"
        android:orderInCategory="100"
        android:title="@string/remove_room" />
</menu>