<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddLinkedAccountFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_1">
            <TextView
                android:id="@+id/add_account_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="24sp"
                android:textColor="@color/blueColor"
                android:textAlignment="center"
                android:text="@string/add_account_title"/>
            <ImageView
                android:id="@+id/add_account_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/linked_account_gray"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/add_account_title_textview"/>
            <TextView
                android:id="@+id/add_account_description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_account_imageview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textColor="@color/blackColor"
                android:textAlignment="center"
                android:text="@string/add_account_description"/>

            <TextView
                android:id="@+id/account_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_account_description_textview"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/account_name"/>
            <EditText
                android:id="@+id/account_name_edittedxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_name_textview"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:hint="@string/account_name_hint"/>

            <TextView
                android:id="@+id/account_email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_name_edittedxt"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/account_email"/>
            <EditText
                android:id="@+id/account_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_email_textview"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:hint="@string/account_email_hint"/>

            <TextView
                android:id="@+id/add_account_note_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_email_edittext"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textColor="@color/blueColor"
                android:textAlignment="textStart"
                android:gravity="start"
                android:text="@string/add_account_note"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_account_note_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background_round_gray"
                android:textColor="@color/whiteColor"
                android:text="@string/add"/>

        </RelativeLayout>

    </FrameLayout>
</ScrollView>