<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddRoomFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_1">
        <TextView
            android:id="@+id/add_room_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/blackColor"
            android:textAlignment="center"
            android:text="@string/add_room_description"/>

        <TextView
            android:id="@+id/floor_level_decsription_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_room_description_textview"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/blackColor"
            android:textAlignment="center"
            android:text="@string/add_floor_level_description"/>
        <LinearLayout
            android:id="@+id/room_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/floor_level_decsription_textview"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <RelativeLayout
                android:id="@+id/room_floor_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/room_floor_edittext"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:inputType="number"
                    android:hint="@string/room_location"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.2"/>
            <EditText
                android:id="@+id/room_name_edittedxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:hint="@string/room_name"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_room_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/room_info_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_round_gray"
            android:textColor="@color/whiteColor"
            android:text="@string/add"/>

        <TextView
            android:id="@+id/rooms_listview_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_room_button"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:textColor="@color/blackColor"
            android:text="@string/rooms"/>

        <TextView
            android:id="@+id/no_rooms_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rooms_listview_title_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textColor="@color/blackColor"
            android:text="@string/no_rooms"/>

        <GridView
            android:id="@+id/rooms_gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rooms_listview_title_textview"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:numColumns="2"
            android:verticalSpacing="4dp"
            android:horizontalSpacing="4dp"
            android:stretchMode="columnWidth"
            android:scrollbars="none"
            android:gravity="center"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/add_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:menu_colorNormal="@color/blueColor"
            app:menu_colorPressed="@color/bluePressedColor"
            app:menu_colorRipple="@color/blueRippleColor"
            android:elevation="16dp"
            app:menu_fab_size="normal"
            app:menu_showShadow="true"
            app:menu_icon="@drawable/ic_add_black_24dp">
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_place_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_add_black_24dp"
                app:fab_colorNormal="@color/blueColor"
                app:fab_colorPressed="@color/bluePressedColor"
                app:fab_colorRipple="@color/blueRippleColor"
                app:fab_size="mini"
                app:fab_label="@string/place"/>
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_floor_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_add_black_24dp"
                app:fab_colorNormal="@color/blueColor"
                app:fab_colorPressed="@color/bluePressedColor"
                app:fab_colorRipple="@color/blueRippleColor"
                app:fab_size="mini"
                app:fab_label="@string/floor"/>
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_room_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                app:fab_colorNormal="@color/blueColor"
                app:fab_colorPressed="@color/bluePressedColor"
                app:fab_colorRipple="@color/blueRippleColor"
                app:fab_size="mini"
                app:fab_label="@string/room"/>
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_device_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                app:fab_colorNormal="@color/blueColor"
                app:fab_colorPressed="@color/bluePressedColor"
                app:fab_colorRipple="@color/blueRippleColor"
                app:fab_size="mini"
                app:fab_label="@string/device"/>
        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>

</FrameLayout>